--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,26 @@
 <resources>
     <string name="app_name">Movie App Recycler View</string>
+    <string name="animal">The son of a wealthy, powerful industrialist returns to India and undergoes a remarkable transformation as he becomes consumed by a quest for vengeance against those threatening his fathers life</string>
+    <string name="baaghi">Ronny, a rebellious man, falls in love with Sia but circumstances separate them. Years later, Ronny learns that Sia is abducted by the martial arts champion Raghav</string>
+    <string name="chennai_express">Rahul, a young man, sets out to immerse his late grandfathers ashes at Rameshwaram. However, when he helps Meena, a runaway bride, board a train, he has to face the ire of her criminal family.</string>
+    <string name="dabangg">Chulbul Pandey is a cop who has his own way of dealing with corruption. His detractor Cheddi Singh manages to create a rift between Chulbul and his step-brother and uses it to his advantage.</string>
+    <string name="ek_villain">Guru is a gangster whose life changes after he falls in love with Aisha and decides to mend his ways. When Aisha gets murdered by a serial killer, Guru begins to search for the culprit.</string>
+
+    <string name="force">In physics, a force is an influence that can cause an object to change its velocity, i.e., to accelerate, meaning a change in speed or direction, unless counterbalanced by other forces. The concept of force makes the everyday notion of pushing or pulling mathematically precise</string>
+    <string name="gabbar_is_back">The citys administration wrongs Aditya, a commoner. To avenge his tragedy, he disguises himself as a vigilante, Gabbar, and teams up with honest government officers to expose the corrupt.</string>
+    <string name="happy_new_year">In a quest to pull off a heist at a hotel in Dubai, Charlie assembles a team of non-dancers to take part in a dance competition at the hotel. They enlist the help of a bar dancer</string>
+    <string name="i">Lingesan, a successful model, falls in love with his co-model Diya and the two decide to marry. However, their happiness is short-lived as he starts suffering from physical deformities.</string>
+    <string name="jay_ho">A former Indian military officer devises a unique plan to promote social responsibility amongst apathetic civilians. The masses embrace his initiative, but he must confront a potent political family</string>
+    <string name="kick">Devi, a man who cannot stay put as he is addicted to going on new adventures, breaks up with his girlfriend, Shaina, who is a Warsaw-based psychiatrist, just to pursue his daredevil ambitions</string>
+    <string name="laal_singh_chadha">Laal Singh Chaddha, a man with a low IQ, recounts the early years of his life to a passenger on a train. Now, his only wish is to be reunited with his childhood sweetheart, Rupa</string>
+    <string name="dhoni">M S Dhoni, a boy from Ranchi, aspires to play cricket for India. Though he initially tries to please his father by working for the Indian Railways, he ultimately decides to chase his dreams.</string>
+    <string name="neerja">Neerja, a flight attendant, boards Pan Am flight 73 in 1986. When the flight is hijacked by terrorists, Neerja risks her life to stall the terrorists from attacking the passengers on board</string>
+    <string name="omg">A devout father takes on a dogmatic school - and his own moral convictions - after his son is expelled from school for an embarrassing video that has gone vira</string>
+    <string name="pk">An innocent alien lands on Earth but loses his communication device. He meets Jaggu, a heartbroken reporter, and tries to find his device. With time, he raises many thought-provoking questions.</string>
+    <string name="rrr">A fearless revolutionary and an officer in the British force, who once shared a deep bond, decide to join forces and chart out an inspirational path of freedom against the despotic rulers</string>
+    <string name="saaho">An undercover agent and his partner go after a thief who has stolen 2,000 crore rupees. Soon, they realise that the case is linked to the death of a crime lord and an emerging gang war</string>
+    <string name="tanhaji">Tanhaji, a Maratha warrior, is Shivaji Maharajs trusted lieutenant. When the Mughals invade and conquer Kondhana fort, he sets out to reclaim it for his king and country</string>
+    <string name="uri">Major Vihaan Singh Shergill of the Indian Army leads a covert operation against a group of militants who attacked a base in Uri, Kashmir, in 2016 and killed many soldiers</string>
+
+    
 </resources>
